--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <title>Robot IDE Simulator Pro</title>
     <link rel="stylesheet" href="style.css" />
 
-    <script src="acorn.min.js"></script>
+    <script src="src/acorn.min.js"></script>
     <script src="https://neil.fraser.name/software/JS-Interpreter/acorn_interpreter.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.44.0/min/vs/loader.min.js"></script>
 
     <!-- Main modules (load in order) -->
-    <script src="physics.js" defer></script>
-    <script src="canvas.js" defer></script>
-    <script src="sensors.js" defer></script>
-    <script src="executor.js" defer></script>
-    <script src="storage.js" defer></script>
-    <script src="script.js" defer></script>
+    <script src="src/physics.js" defer></script>
+    <script src="src/canvas.js" defer></script>
+    <script src="src/sensors.js" defer></script>
+    <script src="src/executor.js" defer></script>
+    <script src="src/storage.js" defer></script>
+    <script src="src/script.js" defer></script>
   </head>
   <body>
     <header class="toolbar">
@@ -82,11 +82,17 @@
 
           <div class="separator"></div>
 
-          <span>Map: </span>
-          <select id="map-select" onchange="handleMapChange(this)">
-            <option value="default">Default (Grey)</option>
-            <option value="upload">📁 Upload My Map...</option>
+          <!-- Map selector -->
+          <label for="map-select">Map:</label>
+          <select id="map-select" onchange="handleMapSelectChange(this)">
+            <option value="default">Default Map</option>
+            <option value="current" id="current-map-option" data-filename="">
+              No map loaded
+            </option>
+            <option value="upload">Upload My Map...</option>
           </select>
+
+          <!-- hidden file input used for uploads -->
           <input
             type="file"
             id="map-upload"
